--- a/.github/workflows/dogfood-review.yml
+++ b/.github/workflows/dogfood-review.yml
@@ -11,9 +11,10 @@ permissions:
 
 jobs:
   ai-review:
-    # Only run on PRs from the same repo (not forks)
-    if: github.event.pull_request.head.repo.full_name == github.repository
-    uses: oddessentials/odd-ai-reviewers/.github/workflows/ai-review.yml@feat/limit-spam
+    # For https://github.com/oddessentials/odd-ai-reviewers only
+    # Dogfood the current branch for the review
+    if: github.repository == 'oddessentials/odd-ai-reviewers' && github.event.pull_request.head.repo.full_name == github.repository
+    uses: ./.github/workflows/ai-review.yml
     with:
       target_repo: ${{ github.repository }}
       target_ref: ${{ github.sha }}
