--- a/package.json
+++ b/package.json
@@ -82,14 +82,11 @@
     "node": ">=22.0.0"
   },
   "packageManager": "pnpm@10.28.2",
-  "overrides": {
-    "@actions/glob": {
-      "@actions/core": {
-        "@actions/http-client": {
-          "undici": "^6.23.0"
-        }
-      }
-    },
-    "fast-xml-parser": "^5.3.4"
+  "pnpm": {
+    "overrides": {
+      "undici": "^6.23.0",
+      "fast-xml-parser": "^5.3.4",
+      "@isaacs/brace-expansion": "5.0.1"
+    }
   }
 }
