--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -70,7 +70,7 @@ COPY config/ ./config/
 # Use pnpm deploy to create a deployment-ready directory with resolved symlinks
 # --legacy required for pnpm v10+ without inject-workspace-packages
 # --ignore-scripts prevents running root preinstall script
-RUN pnpm --filter=./router deploy --legacy --ignore-scripts /deploy
+RUN pnpm --filter=./router deploy --prod --legacy --ignore-scripts /deploy
 
 # ============================================
 # Production image - minimal attack surface
